# FFmpeg

./: .gitignore  FFmpeg 命令说明.md  FFmpeg 编译说明.md  README.md  gcc 编译.md  音视频基础.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/cmdctrl/: cmdutils.c  ffmpeg.c  ffmpeg.h
app/src/main/cpp/codectrl/: codectrl.h  encodeutil.c  liveplayer.c  liveplayer.h  nativeplayer.c
app/src/main/cpp/jni/: ffmpeg_cmd_jni.c  ffmpeg_code_jni.c
app/src/main/cpp/syslog/: syslog.c  syslog.h
app/src/main/cpp/thread/: ffmpeg_thread.c  ffmpeg_thread.h
app/src/main/java/com/huyu/ffmpeg/: FFmpegCmd.java  MainActivity.java  OnExecListener.java
app/src/main/java/com/huyu/opengles20/: GLES20Support.java  GLFrameRenderer.java  GLFrameSurface.java  GLProgram.java  ISimplePlayer.java
app/src/main/res/layout/: activity_main.xml
ffmpeg-3.2.5/: build_arm.sh  config.asm  config.fate  config.h  config.mak
ffmpeg-3.2.5/doc/: config.texi
ffmpeg-3.2.5/doc/examples/pc-uninstalled/: libavdevice.pc
ffmpeg-3.2.5/libavcodec/: aacps_float.d  aacps_tablegen  aacps_tablegen.d  cbrt_data.d  cbrt_tablegen  cbrt_tablegen.d  cos_fixed_tables.d  cos_tablegen  cos_tablegen.d  cos_tables.d  libavcodec.pc  libfdk-aacenc.d  libx264.d  sin_tables.c  sin_tables.d  sinewin.d  sinewin_fixed.d  sinewin_fixed_tablegen  sinewin_fixed_tablegen.d  sinewin_tablegen  sinewin_tablegen.d
ffmpeg-3.2.5/libavdevice/: libavdevice.pc
ffmpeg-3.2.5/libavfilter/: avf_showcqt.d  libavfilter.pc  vf_drawtext.d  vf_subtitles.d
ffmpeg-3.2.5/libavformat/: libavformat.pc  libavformat.so.57
ffmpeg-3.2.5/libavutil/: libavutil.pc  libavutil.so.55
ffmpeg-3.2.5/libpostproc/: libpostproc.pc  libpostproc.so.54
ffmpeg-3.2.5/libswresample/: libswresample.pc  libswresample.so.2
ffmpeg-3.2.5/libswscale/: libswscale.pc  libswscale.so.4
gradle/wrapper/: gradle-wrapper.properties
scripts/: build0_expat.sh  build1_libpng.sh  build2_lame.sh  build3_fribidi.sh  build4_freetype.sh  build5_fontconfig.sh  build6_libass.sh  build7_x264.sh  build7_x265.sh  build7_x265_crosscompile.cmake  build8_aac.sh  build9_ffmpeg.sh  build9_ffmpeg_one.sh  build_share.sh
